<resources>
    <string name="app_name">EducationalApp</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="how_s_your_biology">How\'s Your Biology?</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question 1/X</string>
    <string name="difficulty">Difficulty:</string>
    <string name="_00_30">00:30</string>
    <string name="dummy_text">Dummy text</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="save">Save</string>
    <string name="change_bg_colour">Change BG Colour</string>
    <string name="highscores">Highscores</string>
    <string name="there_s_no_highscores">There\'s no highscores :(</string>
</resources>
